# AIT

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: resolve_experiment.sh  run_ait.sh  run_node.sh
experiments/annuli/: annuli.py  data.py  model.py
experiments/babi/: babi.py  data.py  model.py
experiments/images/: __init__.py  conv_field.py  conv_halting_unit.py  img_ode_classifier.py  run.py
experiments/images/cifar/: cifar.py  data.py  run_ait.sh  run_node.sh
experiments/images/mnist/: data.py  mnist.py  run_ait.sh  run_node.sh
experiments/logger/: logger.py
experiments/mnist/: data.py  mnist.py  run.sh  run_ait.sh  run_node.sh
experiments/training/: __init__.py  argparsing.py  checkpoint.py  losses.py  save_csv.py  scores.py  train_sweep.py  trainer.py
models/: ait_annuli1d_0.0001.eqx  ait_annuli1d_0.001.eqx  ait_annuli1d_0.01.eqx  ait_annuli1d_0.1.eqx  ait_annuli2d_0.0001.eqx  ait_annuli2d_0.001.eqx  ait_annuli2d_0.01.eqx  ait_annuli2d_0.1.eqx  node_annuli1d_0.eqx  node_annuli2d_0.eqx
results/: ait_annuli1d_0.0001.csv  ait_annuli1d_0.001.csv  ait_annuli1d_0.01.csv  ait_annuli1d_0.1.csv  ait_annuli2d_0.0001.csv  ait_annuli2d_0.001.csv  ait_annuli2d_0.01.csv  ait_annuli2d_0.1.csv  ait_mnist_0.0001.csv  ait_mnist_0.001.csv  ait_mnist_0.01.csv  node_annuli1d_0.csv  node_annuli2d_0.csv  node_mnist_0.csv
scripts/: plot_babi_halting.py  plot_experiments.py  plot_halting_map.py
src/ait/: __init__.py
src/ait/aitneuralode/: __init__.py  (+3 more)
src/aitneuralode/: ait_neural_ode.py  aug_dynamics.py
src/utils/: __init__,py  count_params.py
(+6 files in other folders)
