[project]
name = "ait"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
    "diffrax>=0.7.2",
    "equinox>=0.13.8",
    "jax[cuda13]>=0.10.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "optax>=0.2.8",
    "optimistix>=0.1.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["src"]
